--- a/server/mail/payment_success.html
+++ b/server/mail/payment_success.html
@@ -78,6 +78,11 @@
               </td>
             </tr>
             <tr>
+              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Invoice ID:</span> {INVOICE_ID}</p>
+              </td>
+            </tr>
+            <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px; height:1px">
                 <p style="background-color:#666666; height:1px"></p>
               </td>
