--- a/server/mail/payment_success.html
+++ b/server/mail/payment_success.html
@@ -64,7 +64,7 @@
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Bill to:</span> {NAME}</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Name:</span> {NAME}</p>
               </td>
             </tr>
             <tr>
@@ -79,7 +79,7 @@
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Invoice ID:</span> {INVOICE_ID}</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Invoice:</span> {INVOICE_ID}</p>
               </td>
             </tr>
             <tr>
