--- a/server/mail/expiring_card.html
+++ b/server/mail/expiring_card.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700">
     <style type="text/css">
       table {
         border-collapse: collapse !important;
@@ -48,32 +48,32 @@
         <td align="center" style="padding: 0px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 0px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
-                <p style="text-align:left; font-size:24px; font-weight:400; margin:0px">Verify your email address</p>
+              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 5px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
+                <p style="text-align:left; font-size:24px; font-weight:400; margin:0px">Update your card information</p>
               </td>
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400">Verify your email address so we know it's really you.</p>
+                <p style="margin: 0; font-weight:400">This is a friendly reminder that your {CARD} card ending in {CARD_NUMBER} expires at the end of the month. Before it expires, please update your card information.</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                  <tr>
-                    <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 20px 30px;">
-                      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                        <tr>
-                          <td align="center" style="border-radius: 20px;">
-                            <a href="https://account.meteor2.io/verify_email/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; font-weight:600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Verify email address</a>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
+                <td bgcolor="#ffffff" align="left">
+                  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                      <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 20px 30px;">
+                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                          <tr>
+                            <td align="center" style="border-radius: 20px;">
+                              <a href="https://account.meteor2.io" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Update card information</a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
           </table>
         </td>
       </tr>
