--- a/server/mail/payment_success.html
+++ b/server/mail/payment_success.html
@@ -35,10 +35,10 @@
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
               <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px;">
-                <img src="https://account.meteor2.io/logo.png" width="80" height="80" style="display: block; border: 0px; margin: 20px 15px 20px 20px" />
+                <img src="https://account.meteor2.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
               </td>
               <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px;">
-                <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 10px;">Meteor Next</h1>
+                <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 20px">Meteor Next</h1>
               </td>
             </tr>
           </table>
@@ -48,53 +48,38 @@
         <td align="center" style="padding: 0px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 5px 30px; color: black; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
-                <p style="text-align:left; font-size:24px; font-weight:700; margin:0px">Your invoice has been paid</p>
+              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 5px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
+                <p style="text-align:left; font-size:24px; font-weight:400; margin:0px">Your invoice has been paid</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 15px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:700">${PRICE}</span> has been charged to the card on your account.</p>
+              <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 15px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400">€{PRICE} has been charged to the card on your account.</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px; height:1px">
-                <p style="background-color:#666666; height:1px"></p>
+              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Name:</span> {NAME}</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Name:</span> {NAME}</p>
+              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Date:</span> {DATE}</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Date:</span> {DATE}</p>
+              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Subscription:</span> {RESOURCES} Resources</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Subscription:</span> {RESOURCES} Resources</p>
+              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Invoice ID:</span> {INVOICE_ID}</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:700">Invoice ID:</span> {INVOICE_ID}</p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px; height:1px">
-                <p style="background-color:#666666; height:1px"></p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+              <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 15px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
                 <p>You can view your invoices and manage your subscription from your <a href="https://account.meteor2.io" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">Account</a>.</p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;">
-                <p style="margin: 0; font-weight:400">This is an auto-generated email. Please do not reply to this email.</p>
               </td>
             </tr>
           </table>
