--- a/server/mail/reset_password.html
+++ b/server/mail/reset_password.html
@@ -35,10 +35,10 @@
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
               <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px;">
-                <img src="https://account.meteor2.io/logo.png" width="80" height="80" style="display: block; border: 0px; margin: 20px 15px 20px 20px" />
+                <img src="https://account.meteor2.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
               </td>
               <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px;">
-                <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 10px;">Meteor Next</h1>
+                <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 20px">Meteor Next</h1>
               </td>
             </tr>
           </table>
@@ -48,8 +48,13 @@
         <td align="center" style="padding: 0px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 0px 30px; color: black; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
+              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 0px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
                 <p style="text-align:left; font-size:24px; font-weight:400; margin:0px">Reset your password</p>
+              </td>
+            </tr>
+            <tr>
+              <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400">If you did not request a password reset, please ignore this message.</p>
               </td>
             </tr>
             <tr>
@@ -60,33 +65,13 @@
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td align="center" style="border-radius: 20px;">
-                            <a href="https://account.meteor2.io/reset_password/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Reset Password</a>
+                            <a href="https://account.meteor2.io/reset_password/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Reset password</a>
                           </td>
                         </tr>
                       </table>
                     </td>
                   </tr>
                 </table>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 15px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400">If you did not request a password reset, please ignore this message.</p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 15px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400">If that doesn't work, copy and paste the following link in your browser:</p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <a href="https://account.meteor2.io/reset_password/{CODE}" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">https://account.meteor2.io/reset_password/{CODE}</a>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;">
-                <p style="margin: 0; font-weight:400">This is an auto-generated email. Please do not reply to this email.</p>
               </td>
             </tr>
           </table>
