--- a/server/mail/payment_failed.html
+++ b/server/mail/payment_failed.html
@@ -65,7 +65,7 @@
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td align="center" style="border-radius: 20px;">
-                            <a href="https://account.meteor2.io" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; font-weight: 600; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Update payment information</a>
+                            <a href="https://account.meteor2.io/billing" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; font-weight: 600; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Update payment method</a>
                           </td>
                         </tr>
                       </table>
