--- a/server/mail/payment_success.html
+++ b/server/mail/payment_success.html
@@ -54,27 +54,27 @@
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 15px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400">€{PRICE} has been charged to the card on your account.</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">€{PRICE}</span> has been charged to the card on your account.</p>
               </td>
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Name:</span> {NAME}</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">Name:</span> {NAME}</p>
               </td>
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Date:</span> {DATE}</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">Date:</span> {DATE}</p>
               </td>
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Subscription:</span> {RESOURCES} Resources</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">Subscription:</span> {RESOURCES} Resources</p>
               </td>
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:600">· Invoice ID:</span> {INVOICE_ID}</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">Invoice ID:</span> {INVOICE_ID}</p>
               </td>
             </tr>
             <tr>
