--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="<%= BASE_URL %>logo.png">
     <title>Meteor Next | Account</title>
   </head>
-  <body style="background-color:#333333">
+  <body style="background-color:rgb(61, 61, 80)">
     <noscript>
       <strong>We're sorry but this webpage doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
