--- a/server/mail/reset_password.html
+++ b/server/mail/reset_password.html
@@ -65,7 +65,7 @@
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td align="center" style="border-radius: 20px;">
-                            <a href="https://account.meteor2.io/reset_password/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Reset password</a>
+                            <a href="https://account.meteor2.io/reset/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Reset password</a>
                           </td>
                         </tr>
                       </table>
