--- a/server/mail/verify_email.html
+++ b/server/mail/verify_email.html
@@ -20,7 +20,7 @@
   </head>
 
   <body style="margin: 0 !important; padding: 0 !important;">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteor2.io/bg.jpg'); background-size: cover;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteor2.io/bg.png'); background-size: cover;">
       <tr>
         <td align="center">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
