--- a/server/mail/payment_success.html
+++ b/server/mail/payment_success.html
@@ -20,7 +20,7 @@
   </head>
 
   <body style="margin: 0 !important; padding: 0 !important;">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteor2.io/bg.png'); background-size: cover;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteornext.io/bg.png'); background-size: cover;">
       <tr>
         <td align="center">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
@@ -35,7 +35,7 @@
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
               <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px;">
-                <img src="https://account.meteor2.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
+                <img src="https://account.meteornext.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
               </td>
               <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px;">
                 <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 20px">Meteor Next</h1>
@@ -79,7 +79,7 @@
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 15px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p>You can view your invoices and manage your subscription from your <a href="https://account.meteor2.io" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">Account</a>.</p>
+                <p>You can view your invoices and manage your subscription from your <a href="https://account.meteornext.io" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">Account</a>.</p>
               </td>
             </tr>
           </table>
