--- a/server/mail/verify_email.html
+++ b/server/mail/verify_email.html
@@ -20,7 +20,7 @@
   </head>
 
   <body style="margin: 0 !important; padding: 0 !important;">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteor2.io/bg.png'); background-size: cover;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteornext.io/bg.png'); background-size: cover;">
       <tr>
         <td align="center">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
@@ -35,7 +35,7 @@
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
               <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px;">
-                <img src="https://account.meteor2.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
+                <img src="https://account.meteornext.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
               </td>
               <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px;">
                 <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 20px">Meteor Next</h1>
@@ -65,7 +65,7 @@
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td align="center" style="border-radius: 20px;">
-                            <a href="https://account.meteor2.io/verify/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; font-weight:600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Verify email address</a>
+                            <a href="https://account.meteornext.io/verify/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; font-weight:600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Verify email address</a>
                           </td>
                         </tr>
                       </table>
