--- a/server/mail/reset_password.html
+++ b/server/mail/reset_password.html
@@ -20,7 +20,7 @@
   </head>
 
   <body style="margin: 0 !important; padding: 0 !important;">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteornext.io/bg.png'); background-size: cover;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://www.meteornext.io/assets/bg.png'); background-size: cover;">
       <tr>
         <td align="center">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
@@ -34,26 +34,26 @@
         <td align="center" style="padding: 0px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px;">
-                <img src="https://account.meteornext.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
+              <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px; background-color:rgba(255,255,255,0.8); width:82px; text-align:left">
+                <img src="https://www.meteornext.io/assets/logo.png" width="44" height="44" style="display: block; border: 0px; margin: 10px 0px 16px 25px" />
               </td>
-              <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px;">
-                <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 20px">Meteor Next</h1>
+              <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px; background-color: rgba(255,255,255,0.8)">
+                <h1 style="font-size: 24px; font-weight: 400; margin: 0px">Meteor Next</h1>
               </td>
             </tr>
           </table>
         </td>
       </tr>
       <tr>
-        <td align="center" style="padding: 0px 10px 0px 10px;">
+        <td align="center" style="padding: 1px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 0px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
-                <p style="text-align:left; font-size:24px; font-weight:600; margin:0px">Reset your password</p>
+              <td bgcolor="#ffffff" align="left" style="padding:20px 30px 5px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
+                <p style="text-align:left; font-size:21px; font-weight:500; margin:0px">Reset your password</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+              <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 0px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
                 <p style="margin: 0; font-weight:400">If you did not request a password reset, please ignore this message.</p>
               </td>
             </tr>
@@ -65,7 +65,7 @@
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td align="center" style="border-radius: 20px;">
-                            <a href="https://account.meteornext.io/reset/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Reset password</a>
+                            <a href="https://account-dev.meteornext.io/reset/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 600; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Reset password</a>
                           </td>
                         </tr>
                       </table>
