--- a/server/mail/verify_email.html
+++ b/server/mail/verify_email.html
@@ -20,7 +20,7 @@
   </head>
 
   <body style="margin: 0 !important; padding: 0 !important;">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteornext.io/bg.png'); background-size: cover;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://www.meteornext.io/assets/bg.png'); background-size: cover;">
       <tr>
         <td align="center">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
@@ -34,18 +34,18 @@
         <td align="center" style="padding: 0px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px;">
-                <img src="https://account.meteornext.io/logo.png" width="60" height="60" style="display: block; border: 0px; margin: 15px 15px 20px 20px" />
+              <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px; background-color:rgba(255,255,255,0.8); width:82px; text-align:left">
+                <img src="https://www.meteornext.io/assets/logo.png" width="44" height="44" style="display: block; border: 0px; margin: 10px 0px 16px 25px" />
               </td>
-              <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px;">
-                <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 20px">Meteor Next</h1>
+              <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px; background-color: rgba(255,255,255,0.8)">
+                <h1 style="font-size: 24px; font-weight: 400; margin: 0px">Meteor Next</h1>
               </td>
             </tr>
           </table>
         </td>
       </tr>
       <tr>
-        <td align="center" style="padding: 0px 10px 0px 10px;">
+        <td align="center" style="padding: 1px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding:0px 30px 0px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
