--- a/server/mail/payment_failed.html
+++ b/server/mail/payment_failed.html
@@ -58,6 +58,11 @@
               </td>
             </tr>
             <tr>
+              <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 0px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+                <p style="margin: 0; font-weight:400">{NEXT_PAYMENT_ATTEMPT}</p>
+              </td>
+            </tr>
+            <tr>
               <td bgcolor="#ffffff" align="left">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
