--- a/server/mail/payment_success.html
+++ b/server/mail/payment_success.html
@@ -69,7 +69,7 @@
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400"><span style="font-weight:600">Subscription:</span> {RESOURCES} Resources</p>
+                <p style="margin: 0; font-weight:400"><span style="font-weight:600">Subscription:</span> {RESOURCES} Servers</p>
               </td>
             </tr>
             <tr>
