--- a/server/mail/verify_email.html
+++ b/server/mail/verify_email.html
@@ -48,12 +48,12 @@
         <td align="center" style="padding: 1px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 0px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
-                <p style="text-align:left; font-size:24px; font-weight:600; margin:0px">Verify your email address</p>
+              <td bgcolor="#ffffff" align="left" style="padding:20px 30px 0px 30px; color: #303030; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
+                <p style="text-align:left; font-size:21px; font-weight:600; margin:0px">Verify your account</p>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 15px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+              <td bgcolor="#ffffff" align="left" style="padding: 10px 30px 0px 30px; color: #4D4D4D; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
                 <p style="margin: 0; font-weight:400">Verify your email address so we know it's really you.</p>
               </td>
             </tr>
