--- a/server/mail/payment_success.html
+++ b/server/mail/payment_success.html
@@ -35,7 +35,7 @@
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
               <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px; background-color:rgba(255,255,255,0.8); width:82px; text-align:left">
-                <img src="https://accont.meteornext.io/logo.png" width="44" height="44" style="display: block; border: 0px; margin: 10px 0px 16px 25px" />
+                <img src="https://account.meteornext.io/logo.png" width="44" height="44" style="display: block; border: 0px; margin: 10px 0px 16px 25px" />
               </td>
               <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px; background-color: rgba(255,255,255,0.8)">
                 <h1 style="font-size: 24px; font-weight: 400; margin: 0px">Meteor Next</h1>
