--- a/server/mail/reset_password.html
+++ b/server/mail/reset_password.html
@@ -38,7 +38,7 @@
                 <img src="https://account.meteornext.io/logo.png" width="44" height="44" style="display: block; border: 0px; margin: 10px 0px 16px 25px" />
               </td>
               <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px; background-color: rgba(255,255,255,0.8)">
-                <h1 style="font-size: 24px; font-weight: 400; margin: 0px">Meteor Next</h1>
+                <h1 style="font-size: 24px; font-weight: 400; margin: 0px; padding-top:3px">Meteor Next</h1>
               </td>
             </tr>
           </table>
