--- a/server/mail/expiring_card.html
+++ b/server/mail/expiring_card.html
@@ -58,22 +58,27 @@
               </td>
             </tr>
             <tr>
-                <td bgcolor="#ffffff" align="left">
-                  <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                    <tr>
-                      <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 20px 30px;">
-                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                          <tr>
-                            <td align="center" style="border-radius: 20px;">
-                              <a href="https://account.meteornext.io/update/{CODE}" target="_blank" style="font-size: 16px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 500; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Update card information</a>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
+              <td bgcolor="#ffffff" align="left" style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px">
+                <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 5px 30px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px">
+                      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                        <tr>
+                          <td align="center" style="border-radius: 20px;">
+                            <a href="https://account.meteornext.io/update/{CODE}" target="_blank" style="font-size: 16px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 500; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Update card information</a>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 10px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 15px; font-weight: 400; line-height: 25px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;">
+                <p>You can view your invoices and manage your subscription in your <a href="https://account.meteornext.io" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">Account</a>.</p>
+              </td>
+            </tr>
           </table>
         </td>
       </tr>
