--- a/server/mail/verify_email.html
+++ b/server/mail/verify_email.html
@@ -58,10 +58,10 @@
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left">
+              <td bgcolor="#ffffff" align="left" style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 20px 30px;">
+                    <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 20px 30px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px">
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td align="center" style="border-radius: 20px;">
