Improved all Mail Templates

--- a/server/mail/expiring_card.html
+++ b/server/mail/expiring_card.html
@@ -1,96 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700">
-    <style type="text/css">
-      table {
-        border-collapse: collapse !important;
-      }
-      body {
-        height: 100% !important;
-        margin: 0 !important;
-        padding: 0 !important;
-        width: 100% !important;
-      }
-    </style>
   </head>
-
-  <body style="margin: 0 !important; padding: 0 !important;">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-image: url('https://account.meteornext.io/bg.png'); background-size: cover;">
-      <tr>
-        <td align="center">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-            <tr>
-              <td align="center" valign="top" style="padding: 5px 10px 5px 10px;"> </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td align="center" style="padding: 0px 10px 0px 10px;">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-            <tr>
-              <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px; background-color:rgba(255,255,255,0.8); width:82px; text-align:left">
-                <img src="https://account.meteornext.io/logo.png" width="44" height="44" style="display: block; border: 0px; margin: 10px 0px 16px 25px" />
-              </td>
-              <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px; background-color: rgba(255,255,255,0.8)">
-                <h1 style="font-size: 24px; font-weight: 400; margin: 0px; padding-top:3px">Meteor Next</h1>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td align="center" style="padding: 1px 10px 0px 10px;">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding:20px 30px 5px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
-                <p style="text-align:left; font-size:21px; font-weight:600; margin:0px">Update your card information</p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 10px 30px 0px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <p style="margin: 0; font-weight:400">This is a friendly reminder that your {CARD} card ending in {CARD_NUMBER} expires at the end of the month. Before it expires, please update your card information.</p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                  <tr>
-                    <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 5px 30px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px">
-                      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                        <tr>
-                          <td align="center" style="border-radius: 20px;">
-                            <a href="https://account.meteornext.io/update/{CODE}" target="_blank" style="font-size: 16px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; font-weight: 500; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Update card information</a>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 10px 30px; color: #393d4d; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 15px; font-weight: 400; line-height: 25px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;">
-                <p>You can view your invoices and manage your subscription in your <a href="https://account.meteornext.io" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">Account</a>.</p>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td align="center">
-          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-            <tr>
-              <td align="center" valign="top" style="padding: 5px 10px 5px 10px;"> </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
+  <body style="width:100%; height:100%; margin:0; padding:0;">
+    <div style="font-weight:300;background-image:url(https://account.meteornext.io/bg.png);width:100%;font-size:16px;font-family:Lato,sans-serif;background-size:cover;color:#2f2936; padding:10px">
+      <table style="font-weight:300;width:100%;border-collapse:separate;font-size:16px;font-family:Lato,sans-serif;color:#2f2936;max-width:650px;border-radius:4px;border:1px solid #c7d0d4;border-spacing:0;margin:0px auto;padding:0">
+        <tbody>
+          <tr style="font-weight:300; background-color: rgba(255,255,255,0.8);">
+            <td style="font-weight:300;text-align:center;margin:0;padding:0">
+              <div style="font-weight:300;font-size:14px;border-bottom:1px solid #dee7eb;padding:10px 0">
+                <div style="font-weight:300;max-width:600px;text-align:left;margin:0 auto;padding:0 20px">
+                  <div style="font-weight:300;display:inline-block;width:100%">
+                    <h1 style="font-weight:normal;float:left;font-size:32px;line-height:52px;color:#000;margin:0;padding:0">
+                      <a href="https://www.meteornext.io" target="_blank" style="font-weight:500;color:#393d4d;text-decoration:none">
+                        <img src="https://account.meteornext.io/logo_mail.png" width="54px" height="54px" alt="Meteor Next" style="float:left; margin-right:10px">
+                        <span style="color:#393d4d; float:left; margin-top:6px; letter-spacing:-1px;">Meteor Next</span>
+                      </a>
+                    </h1>
+                  </div>
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr style="font-weight:300; background-color: #fff;">
+            <td style="font-weight:300;text-align:center;margin:0;padding:0">
+              <div style="color:#393d4d;font-weight:300;max-width:600px;text-align:left;margin:0 auto;padding:30px 20px 0">
+                <h2 style="font-weight:700;font-size:22px;margin:0 0 5px">Update your card information</h2>
+              </div>
+              <div style="color:#393d4d;font-weight:300;font-size:16px;line-height:25px;max-width:600px;text-align:left;margin:0 auto;padding:20px 20px 0">
+                This is a friendly reminder that your {CARD} card ending in {CARD_NUMBER} expires at the end of the month. Before it expires, please update your card information.
+              </div>
+              <div style="color:#393d4d;font-weight:300;font-size:16px;max-width:600px;text-align:left;margin:0 auto; padding:20px 20px 0">
+                <a href="https://account.meteornext.io/update/{CODE}" target="_blank" style="font-size: 16px; font-family: Lato, Helvetica, Arial, sans-serif; font-weight: 500; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:100%; padding-top:14px; padding-bottom:14px; text-align:center; border-radius: 5px; background-color: #2196f3; display: inline-block;">Update card information</a>
+              </div>
+              <div style="color:#393d4d;font-weight:300;max-width:600px;text-align:left;margin:0 auto;padding:20px 20px">
+                <div style="font-weight:300;border-top:1px solid #e7ebee;padding-top:20px"></div>
+                You can view your invoices and manage your subscription in your <a href="https://account.meteornext.io" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">Account</a>.
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <span style="display:none">{RANDOM}</span>
   </body>
 </html>
