Bug fixes and UI improvements

--- a/server/mail/verify_email.html
+++ b/server/mail/verify_email.html
@@ -35,7 +35,7 @@
                 Verify your email address so we know it's really you.
               </div>
               <div style="color:#393d4d;font-weight:300;font-size:16px;max-width:600px;text-align:left;margin:0 auto; padding:20px 20px">
-                <a href="https://account.meteornext.io/verify/{CODE}" target="_blank" style="font-size: 16px; font-family: Lato, Helvetica, Arial, sans-serif; font-weight: 500; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:100%; padding-top:14px; padding-bottom:14px; text-align:center; border-radius: 5px; background-color: #2196f3; display: inline-block;">Reset password</a>
+                <a href="https://account.meteornext.io/verify/{CODE}" target="_blank" style="font-size: 16px; font-family: Lato, Helvetica, Arial, sans-serif; font-weight: 500; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:100%; padding-top:14px; padding-bottom:14px; text-align:center; border-radius: 5px; background-color: #2196f3; display: inline-block;">Verify email</a>
               </div>
             </td>
           </tr>
